--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,9 @@
         "numbers": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "xutility": "cpp",
+        "xstring": "cpp",
+        "xlocbuf": "cpp"
     }
 }
